[gd_scene load_steps=8 format=1]

[ext_resource path="res://Scripts/battleActor.gd" type="Script" id=1]
[ext_resource path="res://Sprites/senra_idle_sheet.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Introdile.ttf" type="DynamicFontData" id=3]

[sub_resource type="Animation" id=1]

resource/name = "idle"
length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="DynamicFont" id=2]

font/size = 11
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]

font/size = 11
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 29, 47 )

[node name="battleActor" type="Node2D"]

script/script = ExtResource( 1 )

[node name="sBattle" type="Sprite" parent="."]

editor/display_folded = true
texture = ExtResource( 2 )
hframes = 4
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="sBattle"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/idle = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "idle"

[node name="labelHolder" type="Node2D" parent="."]

visibility/visible = false

[node name="statics" type="Node2D" parent="labelHolder"]

editor/display_folded = true

[node name="staticHP" type="Label" parent="labelHolder/statics"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -34.0
margin/top = 68.0
margin/right = 6.0
margin/bottom = 81.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "HP"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="staticEG" type="Label" parent="labelHolder/statics"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -34.0
margin/top = 84.0
margin/right = 6.0
margin/bottom = 97.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "EG"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="staticMG" type="Label" parent="labelHolder/statics"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 62.0
margin/top = 68.0
margin/right = 102.0
margin/bottom = 81.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MG:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="staticPT" type="Label" parent="labelHolder/statics"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 62.0
margin/top = 84.0
margin/right = 102.0
margin/bottom = 97.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PT:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="staticDG" type="Label" parent="labelHolder/statics"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 62.0
margin/top = 100.0
margin/right = 102.0
margin/bottom = 113.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "DG:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="staticCR" type="Label" parent="labelHolder/statics"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 126.0
margin/top = 68.0
margin/right = 166.0
margin/bottom = 81.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CR:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="staticEC" type="Label" parent="labelHolder/statics"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 126.0
margin/top = 84.0
margin/right = 166.0
margin/bottom = 97.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "EC:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="staticSD" type="Label" parent="labelHolder/statics"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 126.0
margin/top = 100.0
margin/right = 166.0
margin/bottom = 113.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SD:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MG" type="Label" parent="labelHolder"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 84.0
margin/top = 68.0
margin/right = 124.0
margin/bottom = 81.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CR" type="Label" parent="labelHolder"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 148.0
margin/top = 68.0
margin/right = 188.0
margin/bottom = 81.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PT" type="Label" parent="labelHolder"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 84.0
margin/top = 84.0
margin/right = 124.0
margin/bottom = 97.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="EC" type="Label" parent="labelHolder"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 148.0
margin/top = 84.0
margin/right = 188.0
margin/bottom = 97.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DG" type="Label" parent="labelHolder"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 84.0
margin/top = 100.0
margin/right = 124.0
margin/bottom = 113.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SD" type="Label" parent="labelHolder"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 148.0
margin/top = 100.0
margin/right = 188.0
margin/bottom = 113.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Name" type="Label" parent="labelHolder"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -29.0
margin/top = 44.0
margin/right = 53.0
margin/bottom = 74.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ASSWIPE"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="barHP" type="ProgressBar" parent="labelHolder"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -12.0
margin/top = 66.0
margin/right = 54.0
margin/bottom = 82.0
custom_fonts/font = SubResource( 3 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="barEG" type="ProgressBar" parent="labelHolder"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -12.0
margin/top = 82.0
margin/right = 54.0
margin/bottom = 98.0
custom_fonts/font = SubResource( 3 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="hurtSenra" type="Button" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -27.0
margin/top = 89.0
margin/right = 65.0
margin/bottom = 109.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "HUG SENRA"
flat = false

[node name="hoverArea" type="Area2D" parent="."]

transform/pos = Vector2( 11, 13 )
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 1, -12 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hoverArea"]

transform/pos = Vector2( 1, -12 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[connection signal="pressed" from="hurtSenra" to="." method="_on_hurtSenra_pressed"]

[connection signal="mouse_enter" from="hoverArea" to="." method="_on_hoverArea_mouse_enter"]

[connection signal="mouse_exit" from="hoverArea" to="." method="_on_hoverArea_mouse_exit"]


